Adding UI Context menu

--- a/package.json
+++ b/package.json
@@ -37,8 +37,14 @@
                 "command": "extension.uploadPath",
                 "title": "Upload from Project Path"
             }
-        ]
+        ],
+        "menus":{
+            "explorer/context": [{            
+                "command": "extension.uploadFile"
+            }]
+        }
     },
+    
     "scripts": {
         "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
         "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
